Logo and Treact wont align

--- a/FINAL.html
+++ b/FINAL.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="FINAL.css">
-    <title>Document</title>
+    <title>FINAL</title>
 </head>
 <body>
    <section id="landing">
@@ -22,7 +22,6 @@
             <a href="#" class="nav__link login">Login</a>
             <a href="#" class="nav__link nav__link--primary">Sign up</a>
         </div>
-        <button class="btn__menu" oneclick="openMenu()">Sign Up</button>
        </div>
     </nav>
    </section>
