customers img wont fit

--- a/FINAL.html
+++ b/FINAL.html
@@ -9,7 +9,7 @@
 <body>
    <section id="landing">
     <nav>
-       <divc class="row nav__row">
+       <div class="row nav__row">
         <div class="nav__logo">
             <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="Treact logo">
             <div class="nav__logo--title">Treact</div>
@@ -32,9 +32,9 @@
                     <p class="header__description--para">Our templates are easy to setup, understand and customize. Fully modular with a variety of pages and components.</p>
                     <div class="header__email">
                         <input type="text" class="header__email--input" placeholder="Your Email Address">
-                        <button class="header__description--para">Get Started</button>
+                        <button class="header__email--btn">Get Started</button>
                     </div>
-                    <p class="header__customers-title">OUT TRUSTED CUSTOMERS</p>
+                    <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
                     <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="header__customers" alt="customers logos">
                 </div>
                 <figure class="header__img--wrapper">
@@ -44,6 +44,6 @@
         </div>
     </header>
    </section>
-   
+
 </body>
 </html>
