--- a/FINAL.html
+++ b/FINAL.html
@@ -43,7 +43,16 @@
             </div>
         </div>
     </header>
-   </section>
-
+   </section> 
+   <main>
+    <section id="features">
+        <div class="container">
+            <div class="row__narrow">
+                <h4 class="section__tag">FEATURES</h4>
+                <h2 class="section__title">We have Amazing <span class="purple">Service</span></h2>
+            </div>
+        </div>
+    </section>
+   </main> 
 </body>
 </html>
