--- a/FINAL.html
+++ b/FINAL.html
@@ -50,6 +50,20 @@
             <div class="row__narrow">
                 <h4 class="section__tag">FEATURES</h4>
                 <h2 class="section__title">We have Amazing <span class="purple">Service</span></h2>
+                <div class="section__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus soluta dolorum maiores officia est laborum quos rerum dolor natus aliquid asperiores voluptas, modi ullam dolores pariatur error tempore id earum.</div>
+                <div class="features">
+                    <div class="feature">
+                        <div class="feature__row">
+                            <figure class="feature__img--wrapper">
+                                <img src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="sheild">
+                            </figure>
+                            <div class="feature__text">
+                                <h2 class="feature__title">Secure</h2>
+                                <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, placeat!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
