now its in a column

--- a/FINAL.html
+++ b/FINAL.html
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="feature__text">
+                    <div class="feature">
                         <div class="feature__row">
                             <figure class="feature__img--wrapper">
                                 <img src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" class="feature__img" alt="support">
