--- a/FINAL.html
+++ b/FINAL.html
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="feature__text">
+                    <div class="feature">
                         <div class="feature__row">
                             <figure class="feature__img--wrapper">
                                 <img src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" class="feature__img" alt="support">
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="feature__text">
+                    <div class="feature">
                         <div class="feature__row">
                             <figure class="feature__img--wrapper">
                                 <img src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" class="feature__img" alt="support">
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="feature__text">
+                    <div class="feature">
                         <div class="feature__row">
                             <figure class="feature__img--wrapper">
                                 <img src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" class="feature__img" alt="support">
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="feature__text">
+                    <div class="feature">
                         <div class="feature__row">
                             <figure class="feature__img--wrapper">
                                 <img src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" class="feature__img" alt="support">
