--- a/FINAL.html
+++ b/FINAL.html
@@ -122,6 +122,21 @@
             </div>
         </div>
     </section>
+    <section id="quality">
+        <div class="container">
+            <div class="row">
+                <div class="quality__description">
+                    <div class="section__tag">QUALITY WORK</div>
+                    <h2 class="section__title"> Designed & Developed by <span class="purple">Professionals</span></h2>
+                    <p class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, dolorum ad voluptatem aspernatur fuga sequi debitis? Iure facere officia vel veniam illo, vitae, quod magnam, ad ullam adipisci officiis nemo.</p>
+                    <button class="btn">Learn More</button>
+                </div>
+                <figure class="quality__img--wrapper">
+                    <img src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png" class="quality__img" alt="hero">
+                </figure>
+            </div>
+        </div>
+    </section>
    </main> 
 </body>
 </html>
