--- a/FINAL.html
+++ b/FINAL.html
@@ -173,6 +173,104 @@
             </div>
         </div>
     </section>
+    <section id="values">
+        <div class="container">
+            <div class="row">
+                 <div class="values__description">
+                    <div class="section__tag">VALUES</div>
+                    <h2 class="section__title">We Always abide by our <span class="purple">Principles.</span></h2>
+                    <div class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptatem ipsum mollitia quis, exercitationem sit! Ratione, cupiditate. Illo odio modi veritatis in similique exercitationem placeat corrupti, incidunt iure minima quas!</div>
+                    <div class="values__list">
+                        <div class="value">
+                            <div class="value__title">
+                                <figure class="value__img--wrapper">
+                                     <img src="./assets/dollar-sign.svg" alt="dollar sign">
+                                </figure>
+                                <div class="value__name">Affordable</div>
+                            </div>
+                            <div class="value__para">We promise to offer you the best rate we can - on par with the industry standard.</div>
+                        </div>
+                        <div class="value">
+                            <div class="value__title">
+                                <figure class="value__img--wrapper">
+                                    <img src="./assets/briefcase.svg" alt="breifcase">
+                                </figure>
+                                <div class="value__name">Professionalism</div>
+                            </div>
+                            <div class="value__para">We assure you that our templates are designed and created by professional designers.</div>
+                        </div>
+                    </div>
+                    <button class="btn">Learn More</button>
+                 </div>
+                 <img class="values__img" src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+            </div>
+        </div>
+    </section>
+    <section id="pricing">
+        <div class="container">
+            <div class="row">
+                <div class="section__tag">pricing</div>
+                <h2 class="section__title">Reasonable & Flexible <span class="purple">Plans</span></h2>
+                <p class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non hic eum atque fuga voluptas eaque, nobis aspernatur corrupti minima aliquam voluptatibus quidem est praesentium sunt iste, et expedita rem possimus.</p>
+                <div class="plans">
+                    <div class="plan">
+                        <div class="plan__stripe"></div>
+                        <div class="plan__top">
+                            <div class="plan__name">PERSONAL</div>
+                            <div class="plan__price">$17.99</div>
+                            <div class="plan__duration">MONTHLY</div>
+                        </div>
+                        <div class="plan__middle">
+                            <div class="plan__target">For Individuals</div>
+                            <div class="plan__feature">30 Templates</div>
+                            <div class="plan__feature">7 Landing Pages</div>
+                            <div class="plan__feature">12 Internal Pages</div>
+                            <div class="plan__feature">Basic Assistance</div>
+                        </div>
+                        <div class="plan__bottom">
+                            <button class="plan__button">Buy Now</button>
+                        </div>
+                    </div>
+                    <div class="plan">
+                        <div class="plan__stripe"></div>
+                        <div class="plan__top">
+                            <div class="plan__name">BUSINESS</div>
+                            <div class="plan__price">$37.99</div>
+                            <div class="plan__duration">MONTHLY</div>
+                        </div>
+                        <div class="plan__middle">
+                            <div class="plan__target">For Small Businesses</div>
+                            <div class="plan__feature">60 Templates</div>
+                            <div class="plan__feature">15 Landing Pages</div>
+                            <div class="plan__feature">22 Internal Pages</div>
+                            <div class="plan__feature">Priority Assistance</div>
+                        </div>
+                        <div class="plan__bottom">
+                            <button class="plan__button">Buy Now</button>
+                        </div>
+                    </div>
+                    <div class="plan">
+                        <div class="plan__stripe"></div>
+                        <div class="plan__top">
+                            <div class="plan__name">ENTERPRISE</div>
+                            <div class="plan__price">$57.99</div>
+                            <div class="plan__duration">MONTHLY</div>
+                        </div>
+                        <div class="plan__middle">
+                            <div class="plan__target">For Large Companies</div>
+                            <div class="plan__feature">90 Templates</div>
+                            <div class="plan__feature">27 Landing Pages</div>
+                            <div class="plan__feature">37 Internal Pages</div>
+                            <div class="plan__feature">Personal Assistance</div>
+                        </div>
+                        <div class="plan__bottom">
+                            <button class="plan__button">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
    </main> 
 </body>
 </html>
