--- a/FINAL.html
+++ b/FINAL.html
@@ -228,7 +228,7 @@
                             <div class="plan__feature">Basic Assistance</div>
                         </div>
                         <div class="plan__bottom">
-                            <button class="plan__button">Buy Now</button>
+                            <button class="plan__button--first">Buy Now</button>
                         </div>
                     </div>
                     <div class="plan">
