done for the day

--- a/FINAL.html
+++ b/FINAL.html
@@ -234,16 +234,16 @@
                     <div class="plan">
                         <div class="plan__stripe"></div>
                         <div class="plan__top">
-                            <div class="plan__name">BUSINESS</div>
-                            <div class="plan__price">$37.99</div>
+                            <div class="plan__name plan__name--middle">BUSINESS</div>
+                            <div class="plan__price plan__name--middle">$37.99</div>
                             <div class="plan__duration">MONTHLY</div>
                         </div>
                         <div class="plan__middle">
-                            <div class="plan__target">For Small Businesses</div>
-                            <div class="plan__feature">60 Templates</div>
-                            <div class="plan__feature">15 Landing Pages</div>
-                            <div class="plan__feature">22 Internal Pages</div>
-                            <div class="plan__feature">Priority Assistance</div>
+                            <div class="plan__target plan__name--middle">For Small Businesses</div>
+                            <div class="plan__feature plan__name--middle">60 Templates</div>
+                            <div class="plan__feature plan__name--middle">15 Landing Pages</div>
+                            <div class="plan__feature plan__name--middle">22 Internal Pages</div>
+                            <div class="plan__feature plan__name--middle">Priority Assistance</div>
                         </div>
                         <div class="plan__bottom">
                             <button class="plan__button">Buy Now</button>
