testimonials outside container?

--- a/FINAL.html
+++ b/FINAL.html
@@ -271,6 +271,42 @@
             </div>
         </div>
     </section>
+    <section id="features">
+        <div class="container">
+            <div class="row">
+                <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" class="testimonials__img" alt="">
+                <div class="testimonials__description">
+                    <div class="section__tag">Testimonials</div>
+                    <h2 class="section__title">Our Cliets <span class="purple">Love us.</span></h2>
+                    <p class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic sed exercitationem praesentium voluptas eaque earum! Quisquam quia praesentium repellat corporis odio, suscipit, fugiat recusandae velit fuga a nihil, nam cum.</p>
+                    <div class="testimonial">
+                        <div class="testimonial__rating">
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                        </div>
+                        <h3 class="testimonial__title">Amazing User Experience</h3>
+                        <p class="testimonial__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestiae deleniti unde dolorem placeat. Quis vitae esse impedit atque tempora sunt quia amet adipisci cumque eligendi, necessitatibus officia provident molestias. Iusto cupiditate natus hic provident maiores ducimus totam cumque consequatur tenetur distinctio nihil consectetur temporibus sapiente quo, aspernatur qui, molestiae cum illum? Facere reiciendis aut, corrupti officiis unde eius tempora?</p>
+                        <div class="testimonial__bottom">
+                            <div class="testimonial__profile">
+                                <img src="./assets/photo-1494790108377-be9c29b29330.avif" class="testimonial__img" alt="">
+                                <div class="testimonial__detail">
+                                    <div class="testimonial__name">Charlotte Hale</div>
+                                    <div class="testimonial__role">Director, Delos Inc.</div>
+                                </div>
+                            </div>
+                            <div class="testimonial__buttons">
+                                <button class="testimonial__button">Click Here</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
    </main> 
 </body>
 </html>
