stars not visible?

--- a/FINAL.html
+++ b/FINAL.html
@@ -271,7 +271,7 @@
             </div>
         </div>
     </section>
-    <section id="features">
+    <section id="testimonials">
         <div class="container">
             <div class="row">
                 <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" class="testimonials__img" alt="">
@@ -281,11 +281,11 @@
                     <p class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic sed exercitationem praesentium voluptas eaque earum! Quisquam quia praesentium repellat corporis odio, suscipit, fugiat recusandae velit fuga a nihil, nam cum.</p>
                     <div class="testimonial">
                         <div class="testimonial__rating">
-                            <i class="fa-solid fa-star" aria-hidden="true"></i>
-                            <i class="fa-solid fa-star" aria-hidden="true"></i>
-                            <i class="fa-solid fa-star" aria-hidden="true"></i>
-                            <i class="fa-solid fa-star" aria-hidden="true"></i>
-                            <i class="fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
                         </div>
                         <h3 class="testimonial__title">Amazing User Experience</h3>
                         <p class="testimonial__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestiae deleniti unde dolorem placeat. Quis vitae esse impedit atque tempora sunt quia amet adipisci cumque eligendi, necessitatibus officia provident molestias. Iusto cupiditate natus hic provident maiores ducimus totam cumque consequatur tenetur distinctio nihil consectetur temporibus sapiente quo, aspernatur qui, molestiae cum illum? Facere reiciendis aut, corrupti officiis unde eius tempora?</p>
@@ -298,7 +298,7 @@
                                 </div>
                             </div>
                             <div class="testimonial__buttons">
-                                <button class="testimonial__button">Click Here</button>
+                                <button class="testimonial__button">See Next Testimonial</button>
                                 </div>
                             </div>
                         </div>
