--- a/FINAL.html
+++ b/FINAL.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="FINAL.css">
     <script src="https://kit.fontawesome.com/cddcfa27e2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./FINAL.js">
     <title>FINAL</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
             <a href="#" class="nav__link login">Login</a>
             <a href="#" class="nav__link nav__link--primary">Sign up</a>
         </div>
-        <button class="btn__menu" onclick="openMenu()">
+        <button class="btn__menu menu--open" onclick="openMenu()">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="btn__menu--svg">
               <line x1="3" y1="12" x2="21" y2="12"></line>
               <line x1="3" y1="6" x2="21" y2="6"></line>
@@ -32,6 +33,22 @@
           </button>
        </div>
     </nav>
+    <div class="menu">
+        <button class="btn__menu btn__menu--close" oneclick="closeMenu()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="light___StyledCloseIcon-lj69nl-14 fASujC">
+                <line x1="18" y1="6" x2="6" y2="18"></line>
+                <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+        </button>
+        <div class="menu__links">
+            <a href="#about" class="menu__link" oneclick="closeMenu()">About</a>
+            <a href="#blog" class="menu__link" oneclick="closeMenu()">Blog</a>
+            <a href="#pricing" class="menu__link" oneclick="closeMenu()">Pricing</a>
+            <a href="#contact__us" class="menu__link" oneclick="closeMenu()">Contact Us</a>
+            <a href="#login" class="menu__link" oneclick="closeMenu()">Login</a>
+            <a href="#signup" class="menu__link menu__link--primary" oneclick="closeMenu()">Sign Up</a>
+        </div>
+    </div>
     <header>
         <div class="container">
             <div class="row">
