ready to submitted

--- a/FINAL.html
+++ b/FINAL.html
@@ -229,7 +229,7 @@
                         <div class="value">
                             <div class="value__title">
                                 <figure class="value__img--wrapper">
-                                     <img src="./assets/dollar-sign.svg" alt="dollar sign">
+                                     <img src="./assets/dollar-sign.svg" class="value__dollar-sign" alt="dollar sign">
                                 </figure>
                                 <div class="value__name">Affordable</div>
                             </div>
@@ -238,7 +238,7 @@
                         <div class="value">
                             <div class="value__title">
                                 <figure class="value__img--wrapper">
-                                    <img src="./assets/briefcase.svg" alt="breifcase">
+                                    <img src="./assets/briefcase.svg" class="value__breifcase" alt="breifcase">
                                 </figure>
                                 <div class="value__name">Professionalism</div>
                             </div>
