--- a/FINAL.html
+++ b/FINAL.html
@@ -22,7 +22,7 @@
             <a href="#" class="nav__link">Pricing</a>
             <a href="#" class="nav__link">Contact Us</a>
             <a href="#" class="nav__link login">Login</a>
-            <a href="#" class="nav__link nav__link--primary">Sign up</a>
+            <a href="#" class="nav__link--primary">Sign up</a>
         </div>
         <button class="btn__menu" onclick="openMenu()">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="btn__menu--svg">
